--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cosmetic_BE
-spring.datasource.url=jdbc:mysql://localhost:3306/cosmetic1?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://root:NGCfzbUkjosbhaFmLATyHgAhdRQGHbUd@monorail.proxy.rlwy.net:21826/railway
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=NGCfzbUkjosbhaFmLATyHgAhdRQGHbUd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.show.sql = true
