--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
-    targetCompatibility = '17'
+    sourceCompatibility = "17"
+    targetCompatibility = "17"
 }
 
 configurations {
